--- a/Docker/wordpress/docker-compose.yml
+++ b/Docker/wordpress/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     volumes:
       - db:/var/lib/mysql
       - /etc/localtime:/etc/localtime:ro
-    restart: always
+    restart: unless-stopped
     env_file:
       - db.env
     networks:
-      - caddy
+      - proxy-tier
 
   wordpress:
     depends_on:
@@ -18,7 +18,7 @@ services:
     container_name: wordpress
     restart: always
     networks:
-      - caddy
+      - proxy-tier
     expose:
       - 80
     volumes:
@@ -37,5 +37,5 @@ volumes:
 
 
 networks:
-  caddy:
+  proxy-tier:
     external: true
