fix: WordPress denied permission

--- a/Docker/wordpress/docker-compose.yml
+++ b/Docker/wordpress/docker-compose.yml
@@ -16,24 +16,21 @@ services:
       - mariadb
     image: wordpress
     container_name: wordpress
-    restart: always
+    restart: unless-stopped
     networks:
       - proxy-tier
     expose:
       - 80
     volumes:
-      - blog:/var/www/html
-      - apache2:/etc/apache2
-      - /etc/localtime:/etc/localtime:ro
-      - ./wp:/var/www/wp/
+      - wp_data:/var/www/html
+      - ./bootstrap.sh:/docker-entrypoint-initwp.d/bootstrap.sh:ro
     env_file:
       - wp.env
     entrypoint: [ "bash", "/var/www/html/entrypoint.sh" ]
 
 volumes:
   db:
-  blog:
-  apache2:
+  wp_data:
 
 
 networks:
