--- a/Docker/nginx/etc/nginx.conf
+++ b/Docker/nginx/etc/nginx.conf
@@ -67,7 +67,7 @@ http {
         client_header_buffer_size  8k;
 
 
-        location = VLESS_HTTPUPGRADE_PATH {
+        location = VLESS_WS_PATH {
             if ($http_upgrade != "websocket") {
                 return 404;
             }
@@ -82,19 +82,20 @@ http {
             proxy_redirect                      off;
         }
 
-        location = VMESS_WS_PATH {
-            if ($http_upgrade != "websocket") {
+        location = VLESS_GRPC_PATH {
+            if ($content_type !~ "application/grpc") {
                 return 404;
             }
 
-            proxy_pass                          http://sing-box:9444;
-            proxy_http_version                  1.1;
-            proxy_set_header Upgrade            $http_upgrade;
-            proxy_set_header Connection         "upgrade";
-            proxy_set_header X-Real-IP          $remote_addr;
-            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-            proxy_set_header Host               $host;
-            proxy_redirect                      off;
+            grpc_pass                    http://sing-box:9444;
+            grpc_read_timeout            1h;
+            grpc_send_timeout            1h;
+            grpc_set_header X-Real-IP    $remote_addr;
+            grpc_socket_keepalive        on;
+
+            client_body_buffer_size      1m;
+            client_body_timeout          1h;
+            client_max_body_size         0;
         }
         
         location / {
