--- a/Docker/wordpress/wp.env
+++ b/Docker/wordpress/wp.env
@@ -5,5 +5,9 @@ WORDPRESS_DB_PASSWORD=TO_BE_FILLED
 WORDPRESS_ADMIN_USER='admin'
 WORDPRESS_ADMIN_PASSWORD=TO_BE_FILLED
 WORDPRESS_ADMIN_EMAIL=TO_BE_FILLED
-WORDPRESS_URL=TO_BE_FILLED
+WORDPRESS_SITE_URL=TO_BE_FILLED
 WORDPRESS_TITLE="My WordPress Blog"
+WORDPRESS_PLUGINS=loginizer
+
+# PHP Memory Configuration
+PHP_MEMORY_LIMIT=512M
