--- a/Docker/nginx/etc/nginx.conf
+++ b/Docker/nginx/etc/nginx.conf
@@ -82,12 +82,12 @@ http {
             proxy_redirect                      off;
         }
 
-        location = VLESS_GRPC_PATH {
+        location = /VLESS_GRPC_PATH {
             if ($content_type !~ "application/grpc") {
                 return 404;
             }
 
-            grpc_pass                    http://sing-box:9444;
+            grpc_pass                    grpc://sing-box:9444;
             grpc_read_timeout            1h;
             grpc_send_timeout            1h;
             grpc_set_header X-Real-IP    $remote_addr;
@@ -98,12 +98,45 @@ http {
             client_max_body_size         0;
         }
         
+        # WordPress specific
         location / {
-            proxy_pass  http://wordpress:80;
-            proxy_set_header X-Real-IP            $remote_addr;
-            proxy_set_header X-Forwarded-For      $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto    $scheme;
-            proxy_set_header X-Forwarded-Host     $host;
+            proxy_pass http://wordpress:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+            
+            # WordPress may need these for file uploads
+            proxy_connect_timeout 300s;
+            proxy_send_timeout 300s;
+            proxy_read_timeout 300s;
+        }
+        
+        # Handle PHP file uploads
+        location ~ \.php$ {
+            proxy_pass http://wordpress:80;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto https;
+        }
+        
+        # Static files caching
+        location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf|txt)$ {
+            proxy_pass http://wordpress:80;
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+        
+        # WordPress security
+        location ~ /\.ht {
+            deny all;
+        }
+        
+        location ~ /wp-config.php {
+            deny all;
         }
     }
 }
