--- a/Docker/nginx/etc/nginx.conf
+++ b/Docker/nginx/etc/nginx.conf
@@ -7,8 +7,10 @@ events {
 }
 
 http {
-    # access_log /dev/stdout;
-    error_log /dev/stderr warn;
+    access_log /dev/stdout;
+    error_log  /dev/stderr debug;
+    access_log /dev/stdout main;
+
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
