--- a/Docker/nginx/docker-compose.yml
+++ b/Docker/nginx/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./etc/nginx.conf:/etc/nginx/nginx.conf
+      - ./html:/var/www/html:ro
     logging:
       driver: "json-file"
       options:
