--- a/Docker/nginx/etc/nginx.conf
+++ b/Docker/nginx/etc/nginx.conf
@@ -9,7 +9,9 @@ events {
 http {
     access_log /dev/stdout;
     error_log  /dev/stderr debug;
-    access_log /dev/stdout main;
+
+    # Zone for 404 rate-limiting
+    limit_req_zone $binary_remote_addr zone=not_found:10m rate=10r/m;
 
 
     map $http_upgrade $connection_upgrade {
@@ -68,6 +70,10 @@ http {
 
         client_header_buffer_size  8k;
 
+        location @not_found {
+            limit_req zone=not_found burst=5 nodelay;
+            return 404;
+        }
 
         location = VLESS_WS_PATH {
             if ($http_upgrade != "websocket") {
@@ -125,20 +131,19 @@ http {
         
         # Static files caching
         location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf|txt)$ {
-            proxy_pass http://wordpress:80;
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            root /var/www/html;
+            autoindex off;
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
         
-        # WordPress security
-        location ~ /\.ht {
-            deny all;
-        }
-        
-        location ~ /wp-config.php {
-            deny all;
+        location / {
+            root /var/www/html;
+            index index.html;
+            try_files $uri $uri/ @not_found;
+
+            # Apply 404 rate limit only
+            limit_req zone=not_found burst=3 nodelay;
         }
     }
 }
