--- a/Docker/nginx/etc/nginx.conf
+++ b/Docker/nginx/etc/nginx.conf
@@ -106,29 +106,19 @@ http {
             client_max_body_size         0;
         }
         
-        # WordPress specific
-        location / {
-            proxy_pass http://wordpress:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto https;
-            
-            # WordPress may need these for file uploads
-            proxy_connect_timeout 300s;
-            proxy_send_timeout 300s;
-            proxy_read_timeout 300s;
+        location /users/ {
+            root /var/www/html;
+            index index.html;
+            autoindex off;
+
+            auth_basic "Restricted Area";
+            auth_basic_user_file /etc/nginx/.htpasswd;
+
+            try_files $uri =404;
+            # This will apply rate limiting after the 404 is generated
+            limit_req zone=not_found burst=3 nodelay;
         }
-        
-        # Handle PHP file uploads
-        location ~ \.php$ {
-            proxy_pass http://wordpress:80;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto https;
-        }
-        
+
         # Static files caching
         location ~* \.(jpg|jpeg|png|gif|ico|css|js|pdf|txt)$ {
             root /var/www/html;
@@ -136,7 +126,7 @@ http {
             expires 1y;
             add_header Cache-Control "public, immutable";
         }
-        
+
         location / {
             root /var/www/html;
             index index.html;
