fix: nginx path match for tcp-based protocols

--- a/Docker/nginx/etc/nginx.conf
+++ b/Docker/nginx/etc/nginx.conf
@@ -75,7 +75,7 @@ http {
             return 404;
         }
 
-        location = VLESS_WS_PATH {
+        location ^~ VLESS_WS_PATH {
             if ($http_upgrade != "websocket") {
                 return 404;
             }
@@ -90,7 +90,7 @@ http {
             proxy_redirect                      off;
         }
 
-        location = /VLESS_GRPC_PATH {
+        location ^~ /VLESS_GRPC_PATH {
             if ($content_type !~ "application/grpc") {
                 return 404;
             }
