fix: enable ipv6 connectivity in Docker

--- a/Docker/nginx/docker-compose.yml
+++ b/Docker/nginx/docker-compose.yml
@@ -27,6 +27,8 @@ services:
 
 networks:
   web:
+    enable_ipv6: true
     external: true
   proxy-tier:
+    enable_ipv6: true
     external: true
