--- a/Docker/sing-box/docker-compose.yml
+++ b/Docker/sing-box/docker-compose.yml
@@ -25,8 +25,10 @@ services:
 
 networks:
   web:
+    enable_ipv6: true
     external: true
   proxy-tier:
+    enable_ipv6: true
     external: true
 
 
